--- a/psd_tool/demo.html
+++ b/psd_tool/demo.html
@@ -39,6 +39,7 @@
           html += "overflow:hidden;border:2px solid red;";
         }
 
+        // 尺寸
         if (node.width) {
           html += "width:" + node.width + "px;";
         }
@@ -52,6 +53,7 @@
           html += "left:" + node.left + "px;";
         }
 
+        // 图片
         if (node.image) {
           html +=
             "background-image:url('./images/" +
@@ -59,6 +61,26 @@
             ".png');background-size:100% 100%;";
         }
         html += '">';
+
+        // 文本
+        if (node.texts) {
+          for (var i = 0; i < node.texts.length; i++) {
+            var item = node.texts[i];
+            html +=
+              "<span style='vertical-align:top;font-size:" +
+              item.fontSize +
+              "px;color:" +
+              item.color +
+              ";line-height:" +
+              item.lineHeight +
+              "px;font-family:" +
+              item.fontName +
+              ";'>" +
+              item.text +
+              "</span>";
+          }
+        }
+
         html += children(node.children);
         html += "</div>";
         return html;
