--- a/psdjs/demo.html
+++ b/psdjs/demo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>psd.js DEMO</title>
+    <title>psd.js node DEMO</title>
     <style>
       div {
         border: 1px solid #000;
@@ -14,17 +14,17 @@
     <script src="./data.js"></script>
     <script>
       window.onload = function () {
-        filter(data, { top: 0, left: 0 });
+        filter(data);
         main(data);
       };
 
-      function filter(data, p) {
+      function filter(data) {
         data.children.map(function (item, index) {
           if (item.children) {
-            filter(item, { top: item.top, left: item.left });
+            filter(item);
           }
-          item.top -= p.top;
-          item.left -= p.left;
+          item.top -= data.top;
+          item.left -= data.left;
           delete item.bottom;
           delete item.right;
         });
