feat: psdjs 文本图层暂时直接导出图片

--- a/psdjs/browser.html
+++ b/psdjs/browser.html
@@ -72,7 +72,7 @@
       function parseText(node, obj) {
         let typeTool = node.layer.typeTool();
         let styles = typeTool.styles();
-        let lineHeight = styles.Leading[0];
+        let lineHeight = styles.Leading ? styles.Leading[0] : obj.height; // PS 设置 Leading auto 时，解析结果中并不存在该字段
         obj.texts = [
           {
             text: typeTool.textValue,
@@ -105,9 +105,11 @@
         if (node.isGroup()) {
           // 组
         } else {
-          if (layer.typeTool) {
-            parseText(node, json);
-          } else if (layer.image) {
+          // 文本图层暂时直接导出图片
+          //if (layer.typeTool) {
+          //  parseText(node, json);
+          //}
+          if (layer.image) {
             saveImage(node, json);
           }
         }
